feat: add Auralis 2.2 bus, effects, and plugin systems